# dude

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  prompt_what_i_want.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
configs/: default.yaml
docs/adrs/: 0001-m1-runtime.md  0002-orchestrator-foundation.md  0003-browser-automation-bootstrap.md  0004-screen-capture-bootstrap.md  0004-speaker-verification-bootstrap.md
docs/architecture/: approval-ux.md  browser-automation.md  files.md  memory.md  persona.md  remote-api.md  remote-voice.md  screen-capture.md  speaker-verification.md  sudo-handoff.md  telegram-transport.md  vision-attachments.md  voice-spine.md
docs/benchmarks/: m1-baseline.md
docs/research/: voice-stack.md  wake-enrollment.md
docs/roadmap/: charter-checklist.md  m1.md  m2.md
docs/security/: approval-model.md
fixtures/: README.md
fixtures/manifests/: m1-template.yaml
ops/systemd/: dude.service
src/dude/: __init__.py  approval.py  audio.py  audit.py  browser.py  cli.py  config.py  control.py  eval.py  events.py  files.py  logging.py  metrics.py  normalize.py  orchestrator.py  persona.py  pipeline.py  remote_api.py  remote_voice.py  reply_audio.py  screen.py  service.py  speaker.py  sudo.py  tailscale.py  telegram_bot.py  wake.py  webapp.py
tests/integration/: test_control.py  test_pipeline_eval.py  test_remote_api.py
tests/unit/: test_asr.py  test_browser.py  test_config.py  test_eval.py  test_files.py  test_metrics.py  test_normalize.py  (+10 more)
tools/: install_gnome_hotkey.sh
(+4 files in other folders)
