[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dude-assistant"
version = "0.1.0"
description = "Local-first Linux personal assistant voice spine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Reda" }
]
dependencies = [
  "faster-whisper>=1.1.1",
  "numpy>=2.2.0",
  "onnxruntime>=1.22.0",
  "psutil>=7.0.0",
  "PyYAML>=6.0.2",
  "sounddevice>=0.5.2",
  "soundfile>=0.13.1",
  "tomli>=2.0.1; python_version < '3.11'",
  "typer>=0.17.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.13.0",
]
browser = [
  "playwright>=1.58.0",
]
cuda_asr = [
  "nvidia-cublas-cu12>=12.9.1.4",
  "nvidia-cudnn-cu12>=9,<10",
]
tts = [
  "kokoro-onnx>=0.4.9",
]
wake = [
  "openwakeword>=0.6.0",
]
vad = [
  "silero-vad>=6.1.0",
]
speaker = [
  "speechbrain>=1.0.3",
]

[project.scripts]
dude = "dude.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dude"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
